--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -11,7 +11,7 @@
     "We also observed the sign of the prediction error to see whether the predicted dailyDelivered values are greater or less than the actula values.\n",
     "The following code and results are for a dataset that contains data of residential premises.\n",
     "\n",
-    "As this model does not use the past values of \"dailyDelivered\" in its prediction (i.e., it only ), it works closely well for both pre-covid and post-covid data. The prediction error for post-covid data is greater than the one for pre-covid data."
+    "As this model does not use the past values of \"dailyDelivered\" in its prediction (i.e., it only uses Temp and isWeekened), it is less effective in prediction than the other model. Observed value of dailyDelivered for post-covid data is greater than the one for pre-covid data.
    ]
   },
   {
