--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# The effect of COVID-19 on deliveredKwh\n",
-    "We designed a machine learning-based model (an LSTM-based) that uses the value of \"Temp\" and \"isWeekened\" of past records to predict the current value of \"dailyDeleivered\". \n",
+    "We designed a machine learning-based model (an LSTM-based) that uses the values of \"Temp\" and \"isWeekened\" of past records to predict the current value of \"dailyDeleivered\". \n",
     "\n",
     "We monitored the prediction error of the pre and post COVID data to observe the effect of COVID-19 on the prediction error. \n",
     "We also observed the sign of the prediction error to see whether the predicted dailyDelivered values are greater or less than the actula values.\n",
     "The following code and results are for a dataset that contains data of residential premises.\n",
     "\n",
-    "As this model does not use the past values of \"dailyDelivered\" in its prediction (i.e., it only ), it works closely well for both pre-covid and post-covid data. The prediction error for post-covid data is greater than the one for pre-covid data."
+    "As this model does not use the past values of \"dailyDelivered\" in its prediction (i.e., it only uses temprature and isWeekened attributes), it is less effective than the other model. However, in this model  the prediction error for post-covid data is considerably greater than the one for pre-covid data."
    ]
   },
   {
@@ -221,7 +221,7 @@
     "Y=dataset.to_numpy()[win_size:,3].astype(np.float32)\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(LSTM(100, activation=('tanh'), dropout=0.2, recurrent_dropout=0.2, stateful = False, input_shape = (win_size,n_features-3)))\n",
+    "model.add(LSTM(20, activation=('tanh'), dropout=0.2, recurrent_dropout=0.2, stateful = False, input_shape = (win_size,n_features-3)))\n",
     "model.add(Dense(1))\n",
     "model.compile(loss=keras.losses.mean_squared_error, optimizer='rmsprop')\n",
     "model.summary()\n",
