--- a/SVM_model.ipynb
+++ b/SVM_model.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# The effect of COVID-19 on deliveredKwh\n",
-    "We designed three machine learning-based model (LSTM-based) that to predict the value of \"dailyDeleivered\". \n",
+    "We designed two machine learning-based model (SVM-based) that to predict the value of \"dailyDeleivered\". \n",
     "\n",
     "We monitored the prediction error of the pre and post COVID data to observe the effect of COVID-19 on the prediction error. \n",
     "We also observed the sign of the prediction error to see whether the predicted dailyDelivered values are greater or less than the actula values.\n",
