--- a/SVM_Functions.ipynb
+++ b/SVM_Functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import sklearn\n",
     "import sklearn.svm as svm\n",
     "from operator import add\n",
+    "import sklearn.metrics as metrics\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +40,20 @@
     "def plot_(h_axis,v1_axis,v2_axis, title=\"Daily Delivered (kWh)\"):\n",
     "    plt.rcParams.update({'font.size': 15})\n",
     "    plt.tight_layout()\n",
-    "    plt.figure(figsize=(30,3))\n",
+    "    plt.figure(figsize=(20,3))\n",
     "    plt.plot(h_axis, v1_axis, color=\"blue\",marker=\"o\", label=\"actual\")\n",
     "    plt.plot(h_axis,v2_axis, color=\"red\",marker=\"o\",label=\"predicted\")\n",
-    "    plt.xticks(h_axis[0::31],rotation=90)\n",
-    "    plt.title(title)\n",
+    "    #plt.xticks(h_axis[0::92],rotation=45)\n",
+    "    plt.xticks(h_axis[0::92])\n",
+    "    #plt.title(title)\n",
+    "    plt.legend(loc='upper right')\n",
+    "    plt.ylabel('Normalized \\nEnergy Consumption')\n",
     "    plt.show()\n",
     "        \n",
     "# split into train and test sets\n",
-    "def split_(ds, train_size=0.67, dimension=2):\n",
-    "    train_size = int(len(ds) * train_size)\n",
+    "def split_(ds, dimension=2):\n",
+    "    #train_size = int(len(ds) * train_size)\n",
+    "    train_size = 365\n",
     "    test_size = len(ds) - train_size\n",
     "    train=[]\n",
     "    test=[]\n",
@@ -57,6 +62,20 @@
     "    else:\n",
     "        train, test = ds[0:train_size,:], ds[train_size:len(ds),:]\n",
     "    return train,test\n",
+    "\n",
+    "\n",
+    "def evaluation_(y, yhat):\n",
+    "    mse = metrics.mean_squared_error(y, yhat)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    r2 = metrics.r2_score(y,yhat)\n",
+    "    #er = ((y - yhat)/y) * 100 \n",
+    "\n",
+    "    print(\"Results of sklearn.metrics:\")\n",
+    "    print(\"MSE:\", mse)\n",
+    "    print(\"RMSE:\", rmse)\n",
+    "    print(\"R-Squared:\", r2)\n",
+    "    #print(\"Error rate:\" , er)\n",
+    "    \n",
     "    \n",
     "def svm_model(ds, X,Y,kernel,trainig_percentage=0.76):\n",
     "        \n",
@@ -64,14 +83,14 @@
     "        \n",
     "    if kernel == 'poly':\n",
     "        model = svm.SVR(kernel='poly', C=100, gamma='auto', degree=3, epsilon=.1, coef0=1)\n",
-    "    elif kernel == 'rbf':\n",
+    "    elif kernel == 'linear':\n",
+    "        model = svm.SVR(kernel='linear', C=100, gamma=0.1, epsilon=.1)\n",
+    "    else: # default: rfb \n",
     "        model = svm.SVR(kernel='rbf', C=100, gamma=0.1, epsilon=.1)\n",
-    "    else: # kernel == 'sig':\n",
-    "        model = svm.SVR(kernel='sigmoid', C=100, gamma=0.1, epsilon=.1)\n",
     "    \n",
     "    #train on precovid data and test on all dataset\n",
-    "    Xtrain,Xtest=split_(X,trainig_percentage)\n",
-    "    Ytrain,Ytest=split_(Y,trainig_percentage,1)\n",
+    "    Xtrain,Xtest=split_(X)\n",
+    "    Ytrain,Ytest=split_(Y,1)\n",
     "    \n",
     "    model.fit(Xtrain, Ytrain)\n",
     "    \n",
@@ -95,12 +114,24 @@
     "    \n",
     "    #predict the entire data\n",
     "    yhat=model.predict(X)\n",
+    "    \n",
+    "    #ds[\"dailyDelivered\"] = pd.to_datetime(ds[\"dailyDelivered\"], format='%Y-%m')\n",
+    "    \n",
     "\n",
     "    h_axis=ds[\"time\"]\n",
     "    v1_axis=ds[\"dailyDelivered\"]\n",
     "    v2_axis=yhat.flatten()\n",
-    "    plot_(h_axis,v1_axis,v2_axis)"
+    "    plot_(h_axis,v1_axis,v2_axis)\n",
+    "    \n",
+    "    evaluation_(Y, yhat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
