- Updated split method in both LSTM and NN models - Updated plot method in LSTM model

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -131,7 +131,8 @@
    "source": [
     "# split into train and test sets\n",
     "def split_(dataset, train_size=0.67, dimension=2):\n",
-    "    train_size = int(len(dataset) * train_size)\n",
+    "    #train_size = int(len(dataset) * train_size)\n",
+    "    train_size = 365\n",
     "    test_size = len(dataset) - train_size\n",
     "    train=[]\n",
     "    test=[]\n",
