--- a/LSTM_models.ipynb
+++ b/LSTM_models.ipynb
@@ -112,6 +112,9 @@
     "        #daysList.append(dateObject.timetuple().tm_yday)\n",
     "        daysList.append(dateObject.days)\n",
     "    \n",
+    "    print(\"==================\")\n",
+    "    print(daysList)\n",
+    "    print(\"==================\")\n",
     "    return daysList"
    ]
   },
@@ -131,6 +134,7 @@
     "    plt.ylim(top = max(max(v1_axis), max(v2_axis)) + 0.3)\n",
     "    plt.legend(loc=\"upper right\")\n",
     "    plt.title(title)\n",
+    "    plt.xlabel(\"Local Days\")\n",
     "    plt.savefig(modelName+\".png\", facecolor='white', transparent=False)"
    ]
   },
@@ -268,7 +272,7 @@
     "overlap=win_size-1\n",
     "\n",
     "#read data\n",
-    "dataset = pd.read_csv('../ProcessedData/processed_GS_Energy.csv', engine='python')\n",
+    "dataset = pd.read_csv('../ProcessedData/processed_Class-res', engine='python')\n",
     "\n",
     "#preprocess data\n",
     "dataset=dataset.fillna(-1)\n",
@@ -294,29 +298,24 @@
     "print(\"**********Model1: Original LSTM*******************************\")\n",
     "#remove id (index=0), time (index=1), and previous value of dailyDelivered for trainig\n",
     "excludedIndexes=[0,1,dailyDeliveredIndex]\n",
-    "lstm_(\"Model1\",X[0:-1,:],dataset.to_numpy()[win_size:,dailyDeliveredIndex].astype(np.float32),n_features,excludedIndexes,trainig_percentage=0.76)\n",
+    "lstm_(\"LSTM-Model1\",X[0:-1,:],dataset.to_numpy()[win_size:,dailyDeliveredIndex].astype(np.float32),n_features,excludedIndexes,trainig_percentage=0.76)\n",
     "\n",
     "#model2:\n",
     "print(\"**********Model2: Original LSTM*******************************\")\n",
     "#remove id and time for trainig\n",
     "excludedIndexes=[0,1]\n",
-    "lstm_(\"Model2\",X[0:-1,:],dataset.to_numpy()[win_size:,dailyDeliveredIndex].astype(np.float32),n_features,excludedIndexes,trainig_percentage=0.76)\n",
+    "lstm_(\"LSTM-Model2\",X[0:-1,:],dataset.to_numpy()[win_size:,dailyDeliveredIndex].astype(np.float32),n_features,excludedIndexes,trainig_percentage=0.76)\n",
     "\n",
     "#model3:\n",
     "print(\"**********Model3: LSTM-Autoencoder*******************************\")\n",
-    "lstmAutoencoer(\"Model3\",X,n_features,dailyDeliveredIndex,trainig_percentage=0.76)"
+    "lstmAutoencoer(\"LSTM-Model3\",X,n_features,dailyDeliveredIndex,trainig_percentage=0.76)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "7366e81109706fe699de0b1c1457711af920e3c1ad13ad775c8efa817800024b"
-    }
-   }
+   "name": "python388jvsc74a57bd07366e81109706fe699de0b1c1457711af920e3c1ad13ad775c8efa817800024b",
+   "display_name": "Python 3.8.8 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,6 +328,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8-final"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "7366e81109706fe699de0b1c1457711af920e3c1ad13ad775c8efa817800024b"
+   }
   }
  },
  "nbformat": 4,
